Added random bytes to Blob

--- a/padogrid-deployment/src/main/resources/geode/apps/perf_test/etc/group-factory.properties
+++ b/padogrid-deployment/src/main/resources/geode/apps/perf_test/etc/group-factory.properties
@@ -30,7 +30,7 @@ printStatusIntervalInSec=10
 # execute concurrently. Note that testCount applies per group. For example, if
 # testCount=2 and groupName=g1&g2,g3 then g1 and g2 execute concurrently twice
 # before g3 executes twice.
-groupNames=g1,g2,g3
+groupNames=g1,g2,g3,g4
 
 # -------------------------------------------------------------------------
 # Group:
@@ -78,6 +78,13 @@ g3.operations=put2
 g3.comment=Stores Order objects into nw/orders. This test should be carried out with \
 CacheWriterLoaderPkDbImpl enabled in the cluster to write to the database of your choice.
 g3.totalInvocationCount=1000
+
+# g4 reads back the Order objects written by g3
+g4.name=Order Get Test
+g4.threadCount=8
+g4.operations=get2
+g4.comment=Reads all Order objects stored by g3.
+g4.totalInvocationCount=1000
 
 # -------------------------------------------------------------------------
 # Operations:
@@ -198,3 +205,15 @@ put2.factory.key.isLeadingZeros=true
 # customerId to co-locate order with customer data
 put2.factory.customerId.prefix=000000-
 put2.factory.customerId.max=100
+
+# get2
+get2.map=nw/orders
+get2.ref=get1
+put2.factory.class=org.apache.geode.addon.demo.nw.impl.OrderFactoryImpl
+# If isRandom is true then key.length and key.isLeadingZeros have no effect
+get2.factory.key.isRandom=false
+# key.length is ignored if isLeadingZeros is false
+# If key.length is <= 0 then it defaults to the the key number length
+# and key.isLeadingZeros has no effect.
+get2.factory.key.length=11
+get2.factory.key.isLeadingZeros=true
