--- a/padogrid-all/padogrid-hazelcast-all-5/pom.xml
+++ b/padogrid-all/padogrid-hazelcast-all-5/pom.xml
@@ -17,7 +17,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-all</artifactId>
-		<version>0.9.19-SNAPSHOT</version>
+		<version>0.9.19</version>
 	</parent>
 	<artifactId>padogrid-hazelcast-all-5</artifactId>
 	<packaging>jar</packaging>
