--- a/hazelcast-addon-jet-core-4/pom.xml
+++ b/hazelcast-addon-jet-core-4/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>0.9.19</version>
+		<version>0.9.20-SNAPSHOT</version>
 	</parent>
 	<artifactId>hazelcast-addon-jet-core-4</artifactId>
 	<name>${project.artifactId}</name>
