Fixed a test_group bug in Geode perf_test that threw NPE when ingesting mock data into database

--- a/padogrid-deployment/src/main/resources/geode/apps/perf_test/etc/group-factory.properties
+++ b/padogrid-deployment/src/main/resources/geode/apps/perf_test/etc/group-factory.properties
@@ -209,7 +209,7 @@ put2.factory.customerId.max=100
 # get2
 get2.map=nw/orders
 get2.ref=get1
-put2.factory.class=org.apache.geode.addon.demo.nw.impl.OrderFactoryImpl
+get2.factory.class=org.apache.geode.addon.demo.nw.impl.OrderFactoryImpl
 # If isRandom is true then key.length and key.isLeadingZeros have no effect
 get2.factory.key.isRandom=false
 # key.length is ignored if isLeadingZeros is false
