--- a/padogrid-deployment/src/main/resources/coherence/apps/perf_test/pom.xml
+++ b/padogrid-deployment/src/main/resources/coherence/apps/perf_test/pom.xml
@@ -55,6 +55,8 @@
 			<version>0.17.2</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.jboss.logging/jboss-logging -->
+		<!-- Do not change jboss version. Later versions are compiled with Java 
+			versions later than 1.8 -->
 		<dependency>
 			<groupId>org.jboss.logging</groupId>
 			<artifactId>jboss-logging</artifactId>
@@ -65,6 +67,13 @@
 			<groupId>org.jboss.spec.javax.transaction</groupId>
 			<artifactId>jboss-transaction-api_1.2_spec</artifactId>
 			<version>1.1.1.Final</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
+		<!-- Required for LocalDateTime causing JDK1.8 exception -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.13.3</version>
 		</dependency>
 	</dependencies>
 
