--- a/padogrid-deployment/src/main/resources/geode/apps/perf_test/pom.xml
+++ b/padogrid-deployment/src/main/resources/geode/apps/perf_test/pom.xml
@@ -20,7 +20,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<hibernate.version>5.6.9.Final</hibernate.version>
 	</properties>
-
 	<dependencies>
 		<!-- Hibernate app -->
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
@@ -52,16 +51,24 @@
 			<version>0.17.2</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.jboss.logging/jboss-logging -->
+		<!-- Do not change jboss version. Later versions are compiled with Java versions later than 1.8 -->
 		<dependency>
 			<groupId>org.jboss.logging</groupId>
 			<artifactId>jboss-logging</artifactId>
-			<version>3.5.0.Final</version>
+			<version>3.4.1.Final</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.jboss.spec.javax.transaction/jboss-transaction-api_1.2_spec -->
 		<dependency>
 			<groupId>org.jboss.spec.javax.transaction</groupId>
 			<artifactId>jboss-transaction-api_1.2_spec</artifactId>
 			<version>1.1.1.Final</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
+		<!-- Required for LocalDateTime causing JDK1.8 exception -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.13.3</version>
 		</dependency>
 	</dependencies>
 
