--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/pom.xml
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/pom.xml
@@ -43,6 +43,8 @@
 			<version>0.17.2</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.jboss.logging/jboss-logging -->
+		<!-- Do not change jboss version. Later versions are compiled with Java 
+			versions later than 1.8 -->
 		<dependency>
 			<groupId>org.jboss.logging</groupId>
 			<artifactId>jboss-logging</artifactId>
