Updated install_padogrid to default to cached product versions

--- a/.github/workflows/publish-product-versions.yml
+++ b/.github/workflows/publish-product-versions.yml
@@ -13,9 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - name: Step 1 - Run install_padogrid -save padogrid_download_versions.sh
+      - name: Step 1 - Run install_padogrid -scan -save padogrid_download_versions.sh
         run: |
-          curl -fsSL https://raw.githubusercontent.com/padogrid/padogrid/develop/padogrid-deployment/src/main/resources/common/bin_sh/install_padogrid | /bin/bash -s -- -no-stty -quiet -save padogrid_download_versions.sh
+          curl -fsSL https://raw.githubusercontent.com/padogrid/padogrid/develop/padogrid-deployment/src/main/resources/common/bin_sh/install_padogrid | /bin/bash -s -- -no-stty -quiet -scan -save padogrid_download_versions.sh
         
       - name: Step 2 - Upload padogrid_download_versions.sh to the branch release
         uses: svenstaro/upload-release-action@v2
