--- a/redisson-addon-core/pom.xml
+++ b/redisson-addon-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>0.9.21</version>
+		<version>0.9.22-SNAPSHOT</version>
 	</parent>
 	<artifactId>redisson-addon-core</artifactId>
 	<packaging>jar</packaging>
