Replaced cluster type value of kraft with kafka and confluent

--- a/padogrid-deployment/src/main/resources/kafka/etc/template-server.properties
+++ b/padogrid-deployment/src/main/resources/kafka/etc/template-server.properties
@@ -126,3 +126,12 @@ log.segment.bytes=1073741824
 # The interval at which log segments are checked to see if they can be deleted according
 # to the retention policies
 log.retention.check.interval.ms=300000
+
+# Enable cluster linking feature. Cluster linking is not supported for Kafka OSS.
+confluent.cluster.link.enable=false
+
+# Comma-separated list of listeners that listen for API requests over either HTTP or HTTPS.
+# If a listener uses HTTPS, the appropriate SSL configuration parameters must aslo be set.
+# If confluent.metadata.server.listeners is used instead of confluent.http.server.listeners,
+# then the Metadata Service will also be enabled on the same listener.
+confluent.http.server.listeners=${confluent.http.server.listeners}
