Added perf_test to Kafka

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ tmp/
 tmp2/
 tmp3/
 ${env:LOG_FILE}
+kafka-addon-core/src/test/java/org/kafka/demo/nw/data/avro/generated
 
 # Configurable build files
 bilder.py
