--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,7 @@
 				<module>hazelcast-addon-jet-core-4</module>
 				<module>hazelcast-addon-jet-demo-3</module>
 				<module>hazelcast-addon-jet-demo-4</module>
+				<module>kafka-addon-core</module>
 				<module>redisson-addon-core</module>
 				<module>snappydata-addon-core</module>
 				<module>padogrid-all/</module>
@@ -136,6 +137,7 @@
 				<module>hazelcast-addon-jet-core-4</module>
 				<module>hazelcast-addon-jet-demo-3</module>
 				<module>hazelcast-addon-jet-demo-4</module>
+				<module>kafka-addon-core</module>
 				<module>redisson-addon-core</module>
 				<module>snappydata-addon-core</module>
 				<module>padogrid-all/</module>
