--- a/padogrid-deployment/src/main/resources/geode/apps/perf_test/pom.xml
+++ b/padogrid-deployment/src/main/resources/geode/apps/perf_test/pom.xml
@@ -48,7 +48,7 @@
 		<dependency>
 			<groupId>com.github.javafaker</groupId>
 			<artifactId>javafaker</artifactId>
-			<version>0.17.2</version>
+			<version>1.0.2</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.jboss.logging/jboss-logging -->
 		<!-- Do not change jboss version. Later versions are compiled with Java versions later than 1.8 -->
@@ -71,6 +71,21 @@
 			<version>2.13.3</version>
 		</dependency>
 	</dependencies>
+	<!-- Exclude commons-lang3 and use Geode's commons-lang3 instead (version incompatibility) -->
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.github.javafaker</groupId>
+				<artifactId>javafaker</artifactId>
+				<exclusions>
+					<exclusion>
+						<groupId>org.apache.commons</groupId>
+						<artifactId>commons-lang3</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<finalName>${project.artifactId}</finalName>
