Fixed log4j issues

--- a/padogrid-deployment/src/main/resources/kafka/etc/template-log4j.properties
+++ b/padogrid-deployment/src/main/resources/kafka/etc/template-log4j.properties
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Unspecified loggers and loggers with additivity=true output to server.log and stdout
+# Unspecified loggers and loggers with additivity=true output to kafkaServer.out and stdout
 # Note that INFO only applies to unspecified loggers, the log level of the child logger is used otherwise
 log4j.rootLogger=INFO, kafkaAppender
 
@@ -23,7 +23,7 @@ log4j.appender.stdout.layout.ConversionPattern=[%d] %p %m (%c)%n
 
 log4j.appender.kafkaAppender=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.kafkaAppender.DatePattern='.'yyyy-MM-dd-HH
-log4j.appender.kafkaAppender.File=${kafka.logs.dir}/server.log
+log4j.appender.kafkaAppender.File=${kafka.logs.dir}/kafkaServer.out
 log4j.appender.kafkaAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.kafkaAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
 
@@ -60,7 +60,7 @@ log4j.appender.authorizerAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
 # Change the line below to adjust ZK client logging
 log4j.logger.org.apache.zookeeper=INFO
 
-# Change the two lines below to adjust the general broker logging level (output to server.log and stdout)
+# Change the two lines below to adjust the general broker logging level (output to kafkaServer.out and stdout)
 log4j.logger.kafka=INFO
 log4j.logger.org.apache.kafka=INFO
 
