Updated Hazelcast for OpenShift to align with the latest changes made by Hazelcast

--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/hazelcast/hazelcast-enterprise-rhel.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/hazelcast/hazelcast-enterprise-rhel.yaml
@@ -117,7 +117,7 @@ objects:
           env:
           - name: HAZELCAST_KUBERNETES_SERVICE_DNS
             value: ${SERVICE_NAME}.${NAMESPACE}.svc.cluster.local
-          - name: HZ_LICENSE_KEY
+          - name: HZ_LICENSEKEY
             value: ${ENTERPRISE_LICENSE_KEY}
           - name: HZ_DATA
             value: /data/hazelcast
@@ -203,7 +203,7 @@ objects:
             mountPath: /data
           env:
           - name: MC_INIT_CMD
-            value: "./mc-conf.sh cluster add -H /data -cn dev -ma ${SERVICE_NAME}.${NAMESPACE}.svc.cluster.local"
+            value: "./bin/mc-conf.sh cluster add -H /data -cn dev -ma ${SERVICE_NAME}.${NAMESPACE}.svc.cluster.local"
         volumes:
         - name: mancenter-storage
           persistentVolumeClaim:
