--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/hazelcast/hazelcast-enterprise.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/hazelcast/hazelcast-enterprise.yaml
@@ -117,7 +117,7 @@ objects:
           env:
           - name: HAZELCAST_KUBERNETES_SERVICE_DNS
             value: ${SERVICE_NAME}.${NAMESPACE}.svc.cluster.local
-          - name: HZ_LICENSE_KEY
+          - name: HZ_LICENSEKEY
             value: ${ENTERPRISE_LICENSE_KEY}
           - name: JAVA_OPTS
             value: "-Dhazelcast.config=/data/hazelcast/hazelcast.yaml -Dnamespace=${NAMESPACE}"
@@ -201,7 +201,7 @@ objects:
             mountPath: /data
           env:
           - name: MC_INIT_CMD
-            value: "./mc-conf.sh cluster add -H /data -cn dev -ma ${SERVICE_NAME}.${NAMESPACE}.svc.cluster.local"
+            value: "./bin/mc-conf.sh cluster add -H /data -cn dev -ma ${SERVICE_NAME}.${NAMESPACE}.svc.cluster.local"
         volumes:
         - name: mancenter-storage
           persistentVolumeClaim:
