--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/hazelcast/hazelcast.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/hazelcast/hazelcast.yaml
@@ -12,7 +12,7 @@ labels:
 parameters:
 - name: HAZELCAST_IMAGE
   description: "Defines the location of Hazelcast image"
-  value: hazelcast/hazelcast:4.0
+  value: hazelcast/hazelcast:latest
   required: true
 - name: SERVICE_NAME
   description: "Defines the service name of the POD to lookup of Kubernetes"
