--- a/padogrid-deployment/src/main/resources/hazelcast/etc/template-log4j2.properties
+++ b/padogrid-deployment/src/main/resources/hazelcast/etc/template-log4j2.properties
@@ -1,13 +1,22 @@
-rootLogger=file
+rootLogger.appenderRefs=file
+rootLogger.appenderRef.file.ref=RollingFile
+
 rootLogger.level=info
 property.filepath=${env:LOG_FILE}
+property.filename=#{filepath}
 
+appenders=console, file
+
+appender.console.type=Console
+appender.console.name=STDOUT
+appender.console.layout.type=PatternLayout
+appender.console.layout.pattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c\{1}:%L - %m%n
 appender.file.type=RollingFile
 appender.file.name=RollingFile
-appender.file.fileName=${filepath}
-appender.file.filePattern=${filepath}-%d{yyyy-MM-dd}-%i.log.gz
+appender.file.fileName=${filepath}/${filename}.log
+appender.file.filePattern=${filepath}/${filename}-%d{yyyy-MM-dd}-%i.log.gz
 appender.file.layout.type=PatternLayout
-appender.file.layout.pattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+appender.file.layout.pattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c\{1}:%L - %m%n
 appender.file.policies.type=Policies
 appender.file.policies.time.type=TimeBasedTriggeringPolicy
 appender.file.policies.time.interval=1
@@ -17,13 +26,13 @@ appender.file.policies.size.size=50MB
 appender.file.strategy.type=DefaultRolloverStrategy
 appender.file.strategy.max=100
 
-rootLogger.appenderRefs=file
+rootLogger.appenderRefs=STDOUT
+rootLogger.appenderRef.stdout.ref=STDOUT
 rootLogger.appenderRef.file.ref=RollingFile
 
-#Hazelcast specific logs.
+# Hazelcast specific logs
 
 #log4j.logger.com.hazelcast=debug
-
 #log4j.logger.com.hazelcast.cluster=debug
 #log4j.logger.com.hazelcast.partition=debug
 #log4j.logger.com.hazelcast.partition.InternalPartitionService=debug
