--- a/padogrid-deployment/src/main/resources/hazelcast/etc/template-log4j2.properties
+++ b/padogrid-deployment/src/main/resources/hazelcast/etc/template-log4j2.properties
@@ -3,18 +3,13 @@ rootLogger.appenderRef.file.ref=RollingFile
 
 rootLogger.level=info
 property.filepath=${env:LOG_FILE}
-property.filename=#{filepath}
 
-appenders=console, file
+appenders=file
 
-appender.console.type=Console
-appender.console.name=STDOUT
-appender.console.layout.type=PatternLayout
-appender.console.layout.pattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c\{1}:%L - %m%n
 appender.file.type=RollingFile
 appender.file.name=RollingFile
-appender.file.fileName=${filepath}/${filename}.log
-appender.file.filePattern=${filepath}/${filename}-%d{yyyy-MM-dd}-%i.log.gz
+appender.file.fileName=${filepath}
+appender.file.filePattern=${filepath}-%d{yyyy-MM-dd}-%i.gz
 appender.file.layout.type=PatternLayout
 appender.file.layout.pattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c\{1}:%L - %m%n
 appender.file.policies.type=Policies
@@ -25,10 +20,6 @@ appender.file.policies.size.type=SizeBasedTriggeringPolicy
 appender.file.policies.size.size=50MB
 appender.file.strategy.type=DefaultRolloverStrategy
 appender.file.strategy.max=100
-
-rootLogger.appenderRefs=STDOUT
-rootLogger.appenderRef.stdout.ref=STDOUT
-rootLogger.appenderRef.file.ref=RollingFile
 
 # Hazelcast specific logs
 
