Added support for Derby

--- a/padogrid-deployment/src/main/resources/geode/apps/perf_test/pom.xml
+++ b/padogrid-deployment/src/main/resources/geode/apps/perf_test/pom.xml
@@ -22,6 +22,12 @@
 	</properties>
 	<dependencies>
 		<!-- Hibernate app -->
+		<!-- https://mvnrepository.com/artifact/org.apache.derby/derbyclient -->
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derbyclient</artifactId>
+			<version>10.14.2.0</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
 			<groupId>mysql</groupId>
