--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/pom.xml
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/pom.xml
@@ -2,7 +2,7 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.hazelcast.addon</groupId>
-	<version>0.9.22-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<artifactId>padogrid-perf_test</artifactId>
 	<packaging>pom</packaging>
 	<name>padogrid-perf_test</name>
@@ -14,6 +14,12 @@
 
 	<dependencies>
 		<!-- Hibernate app -->
+		<!-- https://mvnrepository.com/artifact/org.apache.derby/derbyclient -->
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derbyclient</artifactId>
+			<version>10.14.2.0</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
 			<groupId>mysql</groupId>
