--- a/snappydata-addon-core/pom.xml
+++ b/snappydata-addon-core/pom.xml
@@ -16,7 +16,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>padogrid_0.9.23-SNAPSHOT</version>
+		<version>0.9.23-SNAPSHOT</version>
 	</parent>
 	<artifactId>snappydata-addon-core</artifactId>
 	<packaging>jar</packaging>
