Added support for PADOGRID_HTTPS_ENABLED in containers

--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/padogrid/padogrid.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/padogrid/padogrid.yaml
@@ -56,6 +56,8 @@ objects:
             value: ${HAZELCAST_SERVICE}
           - name: HAZELCAST_CLUSTER_NAME
             value: ${HAZELCAST_CLUSTER_NAME}
+          - name: PADOGRID_HTTPS_ENABLED
+            value: ${PADOGRID_HTTPS_ENABLED}
         volumes:
         - name: ${APP_NAME}-data
           persistentVolumeClaim:
@@ -85,3 +87,8 @@ parameters:
   name: HAZELCAST_CLUSTER_NAME
   required: false
   value: dev
+- description: JupyterLab self-signed certificate
+  displayName: PadoGrid HTTPS
+  name: PADOGRID_HTTPS_ENABLED
+  required: false
+  value: "false"
