--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/padogrid/padogrid-no-pvc.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/padogrid/padogrid-no-pvc.yaml
@@ -41,6 +41,8 @@ objects:
             value: ${HAZELCAST_SERVICE}
           - name: HAZELCAST_CLUSTER_NAME
             value: ${HAZELCAST_CLUSTER_NAME}
+          - name: PADOGRID_HTTPS_ENABLED
+            value: ${PADOGRID_HTTPS_ENABLED}
 parameters:
 - description: The application name
   displayName: Application Name
@@ -57,3 +59,8 @@ parameters:
   name: HAZELCAST_CLUSTER_NAME
   required: false
   value: dev
+- description: JupyterLab self-signed certificate
+  displayName: PadoGrid HTTPS
+  name: PADOGRID_HTTPS_ENABLED
+  required: false
+  value: "false"
