--- a/.github/workflows/publish-product-versions.yml
+++ b/.github/workflows/publish-product-versions.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Step 1 - Run install_padogrid -scan 5 -save padogrid_download_versions.sh
         run: |
           curl -fsSL https://raw.githubusercontent.com/padogrid/padogrid/develop/padogrid-deployment/src/main/resources/common/bin_sh/install_padogrid | /bin/bash -s -- -no-stty -quiet -scan 5 -save padogrid_download_versions.sh
+      - name: Print padogrid_download_versions.sh
+        run: cat padogrid_download_versions.sh
+        shell: bash
         
       - name: Step 2 - Upload padogrid_download_versions.sh to the branch release
         uses: svenstaro/upload-release-action@v2
