--- a/kafka-addon-core/pom.xml
+++ b/kafka-addon-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>0.9.23</version>
+		<version>0.9.24-SNAPSHOT</version>
 	</parent>
 	<artifactId>kafka-addon-core</artifactId>
 	<packaging>jar</packaging>
