--- a/padogrid-all/padogrid-jet-all-3/pom.xml
+++ b/padogrid-all/padogrid-jet-all-3/pom.xml
@@ -17,7 +17,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-all</artifactId>
-		<version>0.9.23</version>
+		<version>0.9.24-SNAPSHOT</version>
 	</parent>
 	<artifactId>padogrid-jet-all-3</artifactId>
 	<packaging>jar</packaging>
