--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 	<artifactId>padogrid-parent</artifactId>
 	<packaging>pom</packaging>
 	<name>padogrid-parent</name>
-	<version>0.9.24-SNAPSHOT</version>
+	<version>0.9.24</version>
 	<description>padogrid data grid management addons and tools</description>
 
 	<properties>
