Added name label

--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/padogrid/padogrid.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/padogrid/padogrid.yaml
@@ -32,6 +32,7 @@ objects:
     replicas: 1
     selector:
       matchLabels:
+        name: ${APP_NAME}
         app: padogrid
         role: jupyterlab
     strategy:
@@ -39,6 +40,7 @@ objects:
     template:
       metadata:
         labels:
+          name: ${APP_NAME}
           app: padogrid
           role: jupyterlab
       spec:
