Fixed the snapshot build issue due to conjar repo

--- a/hazelcast-addon-jet-core-4/pom.xml
+++ b/hazelcast-addon-jet-core-4/pom.xml
@@ -36,6 +36,12 @@
 		<avro.version>1.9.2</avro.version>
 		<skipTests>true</skipTests>
 	</properties>
+	<repositories>
+		<repository>
+			<id>Hazelcast Private Release Repository</id>
+			<url>https://repository.hazelcast.com/release/</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>com.hazelcast.jet</groupId>
