--- a/hazelcast-addon-jet-demo-3/pom.xml
+++ b/hazelcast-addon-jet-demo-3/pom.xml
@@ -35,6 +35,12 @@
 		<jet.version>3.2</jet.version>
 		<skipTests>true</skipTests>
 	</properties>
+	<repositories>
+		<repository>
+			<id>Hazelcast Private Release Repository</id>
+			<url>https://repository.hazelcast.com/release/</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>com.hazelcast.jet</groupId>
