--- a/padogrid-all/pom.xml
+++ b/padogrid-all/pom.xml
@@ -41,9 +41,6 @@
 		<skipTests>true</skipTests>
 	</properties>
 
-	<repositories>
-	</repositories>
-
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
 		<dependency>
@@ -140,9 +137,13 @@
 		<profile>
 			<id>coherence</id>
 			<modules>
-				<!-- Include Coherence. It must be built separately due to the lack 
+				<!-- Include Coherence. It must be built separately due to the lack
 					of public Maven support. -->
 				<module>padogrid-coherence-all</module>
+				<!-- Include Snappydata. A workaround to issues with the conjar repo and
+					the dependency, pentaho-aggdesigner-algorithm-5.1.5-jhyde.jar,
+					which does not exist in the Maven repo. -->
+				<module>padogrid-snappydata-all</module>
 			</modules>
 		</profile>
 	</profiles>
@@ -157,6 +158,10 @@
 		<module>padogrid-jet-all-3</module>
 		<module>padogrid-jet-all-4</module>
 		<module>padogrid-redisson-all</module>
+		<!-- Leave out Snappdata for now. A workaround until the conjar issue can
+			be fixed. -->
+		<!--
 		<module>padogrid-snappydata-all</module>
+		-->
 	</modules>
 </project>
