--- a/padogrid-all/padogrid-jet-all-4/pom.xml
+++ b/padogrid-all/padogrid-jet-all-4/pom.xml
@@ -41,6 +41,14 @@
 		<skipTests>true</skipTests>
 	</properties>
 
+	<repositories>
+		<!-- Hazelcast private repo -->
+		<repository>
+			<id>Hazelcast Private Release Repository</id>
+			<url>https://repository.hazelcast.com/release/</url>
+		</repository>
+	</repositories>
+
 	<build>
 		<plugins>
 			<plugin>
