--- a/padogrid-all/padogrid-snappydata-all/pom.xml
+++ b/padogrid-all/padogrid-snappydata-all/pom.xml
@@ -36,9 +36,23 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.version>5.2.1.RELEASE</spring.version>
 		<skipTests>true</skipTests>
 	</properties>
 
+	<repositories>
+		<!-- TODO: Fix conjar dependency issues -->
+		<!--
+		<repository>
+			<id>pentaho.org</id>
+			<url>https://public.nexus.pentaho.org/repository/proxy-public-3rd-party-release</url>
+		</repository>
+		<repository>
+			<id>conjars.org</id>
+			<url>https://conjars.wensel.net/repo/</url>
+		</repository>
+		-->
+	</repositories>
 	<build>
 		<plugins>
 			<plugin>
