Added support for mqtt

--- a/padogrid-deployment/pom.xml
+++ b/padogrid-deployment/pom.xml
@@ -17,10 +17,7 @@
 # ========================================================================
 -->
 
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>padogrid.addon</groupId>
@@ -51,12 +48,12 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-            <version>${log4j2.version}</version>
+			<version>${log4j2.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
-            <version>${log4j2.version}</version>
+			<version>${log4j2.version}</version>
 		</dependency>
 
 		<!-- padogrid-tools -->
@@ -75,12 +72,30 @@
 			<artifactId>httpclient5</artifactId>
 			<version>5.0.1</version>
 		</dependency>
-		
+
 		<!-- JSR107 (Hazelcast)-->
 		<dependency>
 			<groupId>javax.cache</groupId>
 			<artifactId>cache-api</artifactId>
 			<version>1.1.1</version>
+		</dependency>
+
+		<!-- Paho 3.x -->
+		<dependency>
+			<groupId>org.eclipse.paho</groupId>
+			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+			<version>${paho.version}</version>
+		</dependency>
+		<!-- Paho 5.x -->
+		<dependency>
+			<groupId>org.eclipse.paho</groupId>
+			<artifactId>org.eclipse.paho.mqttv5.client</artifactId>
+			<version>${paho.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>${snake.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -132,15 +147,14 @@
 							<goal>iterator</goal>
 						</goals>
 						<configuration>
-							<items>
-							</items>
+							<items></items>
 							<pluginExecutors>
 								<pluginExecutor>
 									<goal>single</goal>
 									<plugin>
 										<groupId>org.apache.maven.plugins</groupId>
 										<artifactId>maven-assembly-plugin</artifactId>
-                                        <version>3.3.0</version>
+										<version>3.3.0</version>
 									</plugin>
 									<configuration>
 										<descriptors>
