--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,8 @@
 		<padogrid.version>${project.version}</padogrid.version>
 		<geode.version>1.14.4</geode.version>
 		<log4j2.version>2.19.0</log4j2.version>
+		<paho.version>1.2.5</paho.version>
+		<snake.version>1.21</snake.version>
 		<maven.jar.plugin.version>2.4</maven.jar.plugin.version>
 		<maven.javadoc.plugin.version>3.1.0</maven.javadoc.plugin.version>
 		<maven.shade.plugin.version>3.2.2</maven.shade.plugin.version>
@@ -127,6 +129,7 @@
 				<module>hazelcast-addon-jet-demo-3</module>
 				<module>hazelcast-addon-jet-demo-4</module>
 				<module>kafka-addon-core</module>
+				<module>mqtt-addon-core</module>
 				<module>redisson-addon-core</module>
 				<module>snappydata-addon-core</module>
 				<module>padogrid-all/</module>
@@ -152,6 +155,7 @@
 				<module>hazelcast-addon-jet-demo-3</module>
 				<module>hazelcast-addon-jet-demo-4</module>
 				<module>kafka-addon-core</module>
+				<module>mqtt-addon-core</module>
 				<module>redisson-addon-core</module>
 				<module>snappydata-addon-core</module>
 				<module>padogrid-all/</module>
