Dedicated a publisher per caller thread in HaMqttClient

--- a/mqtt-addon-core/pom.xml
+++ b/mqtt-addon-core/pom.xml
@@ -88,11 +88,13 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.4.24.Final</version>
 		</dependency>
+		<!--
 		<dependency>
 			<groupId>com.github.javafaker</groupId>
 			<artifactId>javafaker</artifactId>
 			<version>0.17.2</version>
 		</dependency>
+		-->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -132,6 +134,7 @@
 			<groupId>org.yaml</groupId>
 			<artifactId>snakeyaml</artifactId>
 			<version>${snake.version}</version>
+			<!--<classifier>android</classifier>-->
 		</dependency>
 	</dependencies>
 
