--- a/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/mqttv5-client.yaml
+++ b/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/mqttv5-client.yaml
@@ -59,6 +59,20 @@ clusters:
     # Default: true
     enabled: true
     
+    # true to auto connect as part of cluster service initialization,
+    # false to connect when HaMqttClient.connect() is invoked.
+    # Default: true
+    autoConnect: true
+    
+    # Initial number of endpoints to connect. If intialEndpointCount is set,
+    # then the cluster service first makes connections up to that number of
+    # endpoints and defers the rest of the endpoints to the next probing cycycle.
+    # This can significantly reduce the time to complete HaMqttClient.connect()
+    # call if there are a large number of endpoints. Less than 0 is equivalent to
+    # all endpoints.
+    # Default: -1
+    initialEndpointCount: -1
+        
     # Optional pulisherType. Valid values are STICKY, RANDOM, ROUND_ROBIN.
     # If STICKY and primaryServerURI is defined, the cluter client always uses
     # that server for all operations.
