Added support for mqtt websockets

--- a/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/mqttv5-client.yaml
+++ b/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/mqttv5-client.yaml
@@ -109,9 +109,10 @@ clusters:
       
       # serverURIs defines a list of brokers that make up the cluster. URI ranges
       # are supported for the last IP address octet and the port numbers. If the port
-      # number is not specified then default to 1883 for tcp and 8883 for ssl.
+      # number is not specified then defaults to 1883 for tcp, 8883 for ssl,
+      # 8083 for ws, and 8443 for wss.
       #
-      #   tcp|ssl://<host-name>[:<port-range>]
+      #   tcp|ssl|ws|wss://<host-name>[:<port-range>]
       #     tcp://mqtt.org:1883-1885
       #     tcp://mqtt.org:1883
       #     tcp://mqtt.org
