Added support for FoS in HaMqttClient

--- a/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/group-publish-sleep.properties
+++ b/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/group-publish-sleep.properties
@@ -50,10 +50,10 @@ groupNames=g1
 # -------------------------------------------------------------------------
 
 # Invoke MQTT operations with sleep in between
-g1.name=Multi-PUblish
+g1.name=Multi-Publish
 g1.threadCount=10
 g1.operations=publish1,sleep10,publish2,sleep200,publish3,sleep1000,publish4
-g1.comment=Demonstrates sleep operation
+g1.comment=Demonstrates sleep operation. Data published in test/#
 g1.totalInvocationCount=1000
 
 # -------------------------------------------------------------------------
@@ -114,7 +114,7 @@ g1.totalInvocationCount=1000
 # Total:  22  1,610,000         N/A      12.93
 # -------------------------------------------------------------------------
 
-publish1.topic=topic1
+publish1.topic=test/topic1
 publish1.testCase=publish
 publish1.totalEntryCount=1000000
 publish1.payloadSize=1024
@@ -122,13 +122,13 @@ publish1.key.prefix=a
 publish1.key.startNum=1
 
 publish2.ref=publish1
-publish2.topic=topic2
+publish2.topic=test/topic2
 
 publish3.ref=publish1
-publish3.topic=topic3
+publish3.topic=test/topic3
 
 publish4.ref=publish1
-publish4.topic=topic4
+publish4.topic=test/topic4
 
 # sleep 10 msec
 sleep10.sleep=10
