--- a/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/group-publish.properties
+++ b/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/group-publish.properties
@@ -53,7 +53,7 @@ groupNames=g1
 g1.name=Multi-Publish
 g1.threadCount=10
 g1.operations=publish1,publish2,publish3,publish4,publish5,publish6,publish7,publish8,publish9,publish10,publish11,publish12,publish13,publish14,publish15,publish16,publish17,publish18,publish19,publish20,publish21,publish22
-g1.comment=Publishes messages to 22 topics
+g1.comment=Publishes messages to 22 topics in test/#
 g1.totalInvocationCount=1000
 
 # -------------------------------------------------------------------------
@@ -114,76 +114,76 @@ g1.totalInvocationCount=1000
 # Total:  22  1,610,000         N/A      12.93
 # -------------------------------------------------------------------------
 
-publish1.topic=topic1
+publish1.topic=test/topic1
 publish1.testCase=publish
 publish1.totalEntryCount=1000000
 publish1.payloadSize=1024
 
 publish2.ref=publish1
-publish2.topic=topic2
+publish2.topic=test/topic2
 
 publish3.ref=publish1
-publish3.topic=topic3
+publish3.topic=test/topic3
 
 publish4.ref=publish1
-publish4.topic=topic4
+publish4.topic=test/topic4
 
 publish5.ref=publish1
-publish5.topic=topic5
+publish5.topic=test/topic5
 
 publish6.ref=publish1
-publish6.topic=topic6
+publish6.topic=test/topic6
 
 publish7.ref=publish1
-publish7.topic=topic7
+publish7.topic=test/topic7
 
 publish8.ref=publish1
-publish8.topic=topic8
+publish8.topic=test/topic8
 
 publish9.ref=publish1
-publish9.topic=topic9
+publish9.topic=test/topic9
 
 publish10.ref=publish1
-publish10.topic=topic10
+publish10.topic=test/topic10
 
-publish11.topic=topic11
+publish11.topic=test/topic11
 publish11.testCase=publish
 publish11.totalEntryCount=500000
 publish11.payloadSize=1024
 
 publish12.ref=publish11
-publish12.topic=topic12
+publish12.topic=test/topic12
 
 publish13.ref=publish11
-publish13.topic=topic13
+publish13.topic=test/topic13
 
 publish14.ref=publish11
-publish14.topic=topic14
+publish14.topic=test/topic14
 
 publish15.ref=publish11
-publish15.topic=topic15
+publish15.topic=test/topic15
 
-publish16.topic=topic16
+publish16.topic=test/topic16
 publish16.testCase=publish
 publish16.totalEntryCount=100000
 publish16.payloadSize=1024
 
 publish17.ref=publish16
-publish17.topic=topic17
+publish17.topic=test/topic17
 
 publish18.ref=publish16
-publish18.topic=topic18
+publish18.topic=test/topic18
 
 publish19.ref=publish16
-publish19.topic=topic19
+publish19.topic=test/topic19
 
-publish20.topic=topic20
+publish20.topic=test/topic20
 publish20.testCase=publish
 publish20.totalEntryCount=10000
 publish20.payloadSize=1024
 
 publish21.ref=publish20
-publish21.topic=topic21
+publish21.topic=test/topic21
 
 publish22.ref=publish20
-publish22.topic=topic22
+publish22.topic=test/topic22
