--- a/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/group.properties
+++ b/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/group.properties
@@ -53,19 +53,19 @@ groupNames=g1&g2
 # comment     Any text describing the group. 
 # -------------------------------------------------------------------------
 
-# g1 publishs 100,000 1 KiB objects into topic1 defined by the 'publish1' operation.
+# g1 publishs 100,000 1 KiB objects into test/topic1 defined by the 'publish1' operation.
 # Note that you can list more than one operation.
 g1.name=Publish Test 1 KiB
 g1.threadCount=8
 g1.operations=publish1
-g1.comment=MqttClient.publish() test (1 KiB payload in topic1)
+g1.comment=MqttClient.publish() test (1 KiB payload in test/topic1)
 g1.totalInvocationCount=100000
 
-# g2 publishs 1000 10 KiB objects into topic2 defined by the 'publish2' operation.
+# g2 publishs 1000 10 KiB objects into test/topic2 defined by the 'publish2' operation.
 g2.name=Publish Test 10 KiB
 g2.threadCount=8
 g2.operations=publish2
-g2.comment=MqttClient.publish() test (10 KiB payload in topic2)
+g2.comment=MqttClient.publish() test (10 KiB payload in test/topic2)
 g2.totalInvocationCount=1000
 
 # -------------------------------------------------------------------------
@@ -114,7 +114,7 @@ g2.totalInvocationCount=1000
 # -------------------------------------------------------------------------
 
 # publish1
-publish1.topic=topic1
+publish1.topic=test/topic1
 publish1.testCase=publish
 publish1.payloadSize=1024
 publish1.key.prefix=a
@@ -124,7 +124,7 @@ publish1.key.startNum=1
 sleep1.sleep=1000
 
 # publish2
-publish2.topic=topic2
+publish2.topic=test/topic2
 publish2.testCase=publish
 publish2.payloadSize=10240
 publish2.key.prefix=a
