--- a/mqtt-addon-core/src/main/resources/mqttv5-client.yaml
+++ b/mqtt-addon-core/src/main/resources/mqttv5-client.yaml
@@ -86,6 +86,36 @@ clusters:
     # Default: 5000
     timeToWait: 5000
     
+    # Failover Service (FoS). Valid values are -1, 0, 1, 2. Similar to QoS,
+    # HaMqttClient provides a subscriber failover service in four (4) levels.
+    #
+    # -1 - all subscribers, all connections. This level is default. It makes
+    #      subscriptions and connections to all endpoints.
+    #
+    #  0 - one subscriber, two connections. This level opens connections to two
+    #      endpoints, but sticks topic subscriptions only to one endpoint. No
+    #      subscriptions are made to the other endpoint. Only when the sticky
+    #      endpoint fails, subscriptions are made to the other endpoint at that
+    #      time. Failover is quick but there is a subscription delay which could
+    #      lead to data loss.
+    #
+    #  1 - two subscribers, two connections. Like FoS 0, this level opens two (2)
+    #      connections but increases the number of endpoints that make subscriptions
+    #      to two (2). That means, with FoS 2, HaMqttClient receives duplicate messages,
+    #      one from each endpoint. HaMqttClient sticks to one of the endpoints and
+    #      delivers data only from that sticky endpoint to the application. It discards
+    #      the data from the other endpoint. The other endpoint replaces the sticky
+    #      endpoint upon failure. Failover is immediate with no data loss.
+    #
+    #  2 - select subscribers, select connections. FoS 2 allows configuration of both
+    #      subscriberCount and liveEndpointCount. By default, FoS 2 makes subscriptions
+    #      to all of the endpoints. This is rather expensive and wasteful if there are
+    #      many endpoints. The higher the numbers the higher the HA at the expense of
+    #      higher volume of duplicate data and higher network traffic.
+    #
+    # Default: -1
+    fos: -1
+    
     # Initial number of endpoints to connect. If intialEndpointCount is set,
     # then the cluster service first makes connections up to that number of
     # endpoints and defers the rest of the endpoints to the next probing cycycle.
@@ -94,10 +124,26 @@ clusters:
     # all endpoints.
     # Default: -1
     initialEndpointCount: -1
-        
-    # Optional pulisherType. Valid values are STICKY, RANDOM, ROUND_ROBIN.
+    
+    # Number of live endpoints to maintain. -1 for all endpoints. This parameter is
+    # configurable only for FoS 2. For other FoS levels, it is hard wired as follows.
+    #    FoS 0: -1
+    #    FoS 1: 2
+    #    FoS 2: 2 
+    # Default: -1
+    liveEndpointCount: -1
+    
+    # Maximum number of subscribers. -1 for all endpoints. This parameter is
+    # configurable only for FoS 2. For other FoS levels, it is hard wired as follows.
+    #    FoS 0: -1
+    #    FoS 1: 1
+    #    FoS 2: 2 
+    # Default: -1
+    subscriberCount: -1
+    
+    # Publisher Type. Valid values are STICKY, RANDOM, ROUND_ROBIN.
     # If STICKY and primaryServerURI is defined, the cluster client always uses
-    # that server for all operations.
+    # that server for all operations. For FoS 0, publisherType is always STICKY.
     # Default: STICKY
     publisherType: STICKY
     
@@ -107,48 +153,54 @@ clusters:
     # is automatically added to connection.serverURIs if not included.
     primaryServerURI: null
     
-    # subBridges fowards received messages to the target clusters.
-    # Note that subBridges is a single point of failure. If the application
-    # fails, then so do the subBridges.
-    subBridges:
-        # Target cluster name. Undefined cluster names are logged and discarded.
-        # If the target cluster name is this cluster name, then it is logged and
-        # dicarded.
-      - cluster: null
-        # A list of topic filters from which the topics are to be filtered
-        # and forwarded to the target cluster.
-        topicFilters: []
-        
-        # Set qos to override the caller's qos value. It must be a valid number,
-        # i.e., 0, 1, or 2; otherwise, it is ignored and the caller's qos is used.
-        # Note that qos for publishing messages.
-        # Default: -1
-        qos: -1
+    bridges:
     
-    # pubBridges sends published messages to the target clusters. 
-    # Note that unlike subBridges, pubBridges does not suffer from a single point
-    # of failure since the application directly publishes data to the target
-    # clusters. Drawbacks are as follows.
-    # 1) It puts additional load on the application. Each publish() call 
-    #    makes additional calls to the target clusters defined under pubBridges.
-    # 2) The target clusters must be exposed to the application. Normally,
-    #    a bridge serves as a proxy to overcome firewalls, but pubBridges
-    #    requires direct access to the targer clusters.
-    pubBridges:
-        # Target cluster name. Undefined cluster names are logged and discarded.
-        # If the target cluster name is this cluster name, then it is logged and
-        # dicarded.
-      - cluster: null
-        # A list of topic filters from which the topics are to be filtered
-        # before publishing messages.
-        topicFilters: []
+      # 'in' fowards incoming messages to the target clusters.
+      # Note that this bridge is a single point of failure. If the application
+      # fails, then so do this bridge.
+      in:
+      
+          # Target cluster name. Undefined cluster names are logged and discarded.
+          # If the target cluster name is the parent cluster name, then it is logged
+          # and dicarded.
+        - cluster: null
         
-        # Set qos to override the caller's qos value. It must be a valid number,
-        # i.e., 0, 1, or 2; otherwise, it is ignored and the caller's qos is used.
-        # Note that qos for publishing messages.
-        # Default: -1
-        qos: -1
-
+          # A list of topic filters from which the topics are to be filtered
+          # and forwarded to the target cluster.
+          topicFilters: []
+          
+          # Set qos to override the caller's qos value. It must be a valid number,
+          # i.e., 0, 1, or 2; otherwise, it is ignored and the caller's qos is used.
+          # Note that qos is for forwarding (publishing) messages.
+          # Default: -1
+          qos: -1
+        
+      # 'out' sends outgoing messages to the target clusters. 
+      # Note that unlike 'in', 'out' does not suffer from a single point
+      # of failure since the application directly sends data to the target
+      # clusters. Drawbacks are as follows.
+      # 1) It puts additional load on the application. Each publish() call 
+      #    makes additional calls to the target clusters defined under 'out'.
+      # 2) The target clusters must be exposed to the application. Normally,
+      #    a bridge serves as a proxy to overcome firewalls, but 'out'
+      #    requires direct access to the target clusters.
+      out:
+      
+          # Target cluster name. Undefined cluster names are logged and discarded.
+          # If the target cluster name is this cluster name, then it is logged and
+          # dicarded.
+        - cluster: null
+        
+          # A list of topic filters from which the topics are to be filtered
+          # before sending messages.
+          topicFilters: []
+          
+          # Set qos to override the caller's qos value. It must be a valid number,
+          # i.e., 0, 1, or 2; otherwise, it is ignored and the caller's qos is used.
+          # Note that qos is for forwarding (publishing) messages.
+          # Default: -1
+          qos: -1
+   
     # MqttClientConnectionOptions attributes. Each attribute defined in this
     # file represents the corresponding attribute in MqttConnectionOptions.
     # Please see MqttConnectionOptions for details.
@@ -181,7 +233,7 @@ clusters:
       #     tcp://mqtt.org:1883
       #     tcp://mqtt.org
       #
-      #   tcp|ssl://<IPv3>.<octet-range>[:port-range]   
+      #   tcp|ssl|ws|wss://<IPv3>.<octet-range>[:port-range]   
       #     tcp://192.168.1.10-20:1883-1885
       #     tcp://192.168.1.10:1883-1885
       #     tcp://192.168.1.10-20:1883
