--- a/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/group-topic.properties
+++ b/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/group-topic.properties
@@ -53,19 +53,19 @@ groupNames=g1,g2
 # comment     Any text describing the group. 
 # -------------------------------------------------------------------------
 
-# g1 publishes 100,000 1 KiB objects into topic1 defined by the 'publish1' operation.
+# g1 publishes 100,000 1 KiB objects into test/topic1 defined by the 'publish1' operation.
 # Note that you can list more than one operation.
 g1.name=Topic.publsh() Test
 g1.threadCount=8
 g1.operations=publish1
-g1.comment=Topic.publish() test (1 KiB payload in topic1)
+g1.comment=Topic.publish() test (1 KiB payload in test/topic1)
 g1.totalInvocationCount=100000
 
-# g2 publishes 100 10 KiB objects into topic2 defined by the 'publish2' operation.
+# g2 publishes 100 10 KiB objects into test/topic2 defined by the 'publish2' operation.
 g2.name=Topic.publsh() Test
 g2.threadCount=8
 g2.operations=publish2
-g2.comment=Topic.publish() test (1 KiB payload in topic1)
+g2.comment=Topic.publish() test (1 KiB payload in test/topic1)
 g2.totalInvocationCount=100000
 
 # -------------------------------------------------------------------------
@@ -114,11 +114,11 @@ g2.totalInvocationCount=100000
 # -------------------------------------------------------------------------
 
 # publish1 (1 KiB)
-publish1.topic=topic1
+publish1.topic=test/topic1
 publish1.testCase=publish
 publish1.payloadSize=1024
 
 # publish2 (10 KiB)
-publish2.topic=topic2
+publish2.topic=test/topic2
 publish2.testCase=publish
 publish2.payloadSize=10240
