Updated build for mosquitto

--- a/mqtt-addon-core/etc/mqttv5-publisher-bridge.yaml
+++ b/mqtt-addon-core/etc/mqttv5-publisher-bridge.yaml
@@ -40,7 +40,7 @@ persistence:
 clusters:
 
   # Publishes messages to the cluster-edge. The subscriber app (see mqttv5-subscriber-bridge)
-  # in receives messages from cluster-edge and forwards them to cluster-enterprise. 
+  # receives messages from cluster-edge and forwards them to cluster-enterprise. 
   - name: cluster-edge
     enabled: true
     connection:
