--- a/mqtt-addon-core/src/main/resources/mqttv5-client.yaml
+++ b/mqtt-addon-core/src/main/resources/mqttv5-client.yaml
@@ -162,7 +162,7 @@ clusters:
       
           # Target cluster name. Undefined cluster names are logged and discarded.
           # If the target cluster name is the parent cluster name, then it is logged
-          # and dicarded.
+          # and discarded.
         - cluster: null
         
           # A list of topic filters from which the topics are to be filtered
@@ -188,7 +188,7 @@ clusters:
       
           # Target cluster name. Undefined cluster names are logged and discarded.
           # If the target cluster name is this cluster name, then it is logged and
-          # dicarded.
+          # discarded.
         - cluster: null
         
           # A list of topic filters from which the topics are to be filtered
